# policy-wonks-api

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml
db/: chroma.sqlite3
src/policy_wonks/: app.py  crew.py  llm_config.py  main.py  models.py
src/policy_wonks/config/: agents.yaml  tasks.yaml
src/policy_wonks/db/: chroma.sqlite3
