[project]
name = "policy_wonks"
version = "0.1.0"
description = "policy_wonks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.95.0",
    "huggingface-hub>=0.27.1",
]

[project.scripts]
policy_wonks = "policy_wonks.main:run"
run_crew = "policy_wonks.main:run"
train = "policy_wonks.main:train"
replay = "policy_wonks.main:replay"
test = "policy_wonks.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
